#!/usr/bin/env node

/**
 * ATP/ADP Infrastructure Implementation Swarm
 * Coordinates queens to build semifungible token system with society treasury
 */

const fs = require('fs');
const path = require('path');

// Colors for output
const colors = {
  reset: '\x1b[0m',
  bright: '\x1b[1m',
  red: '\x1b[31m',
  green: '\x1b[32m',
  yellow: '\x1b[33m',
  blue: '\x1b[34m',
  magenta: '\x1b[35m',
  cyan: '\x1b[36m'
};

// Swarm Task Definition
const SWARM_TASK = {
  name: "ATP/ADP Semifungible Token Infrastructure",
  description: "Implement complete energy economy with society treasury on blockchain",
  budget: 500, // ATP allocation for this task
  deadline: "2025-01-18",
  queens_involved: [
    "ATP-Economy-Queen",
    "Demo-Society-Queen",
    "LCT-Infrastructure-Queen",
    "Web4-Compliance-Queen"
  ],
  objectives: [
    "Create semifungible ATP/ADP token types",
    "Implement society treasury storage",
    "Fix CLI for minting operations",
    "Enable complete energy cycle",
    "Migrate from conceptual to actual blockchain storage"
  ]
};

/**
 * Task breakdown by queen
 */
const QUEEN_TASKS = {
  "ATP-Economy-Queen": {
    workers: {
      "tokenomics-designer": [
        "Design semifungible token structure",
        "Define ATP charged vs ADP discharged states",
        "Specify society pool mechanics",
        "Create demurrage parameters"
      ],
      "coder": [
        "Implement EnergyPool state storage",
        "Create GetSocietyPool keeper method",
        "Create UpdateSocietyBalance keeper method",
        "Wire up pool state to MintADP"
      ],
      "economic-validator": [
        "Test token state transitions",
        "Verify pool balance updates",
        "Validate anti-hoarding mechanics",
        "Ensure work-based discharge"
      ]
    }
  },
  "Demo-Society-Queen": {
    workers: {
      "backend-dev": [
        "Create society state structure",
        "Implement society LCT storage",
        "Add role binding mechanism",
        "Create citizenship records"
      ],
      "database-architect": [
        "Design treasury ledger schema",
        "Create audit trail structure",
        "Implement amendment mechanism",
        "Setup witness records"
      ],
      "coder": [
        "Implement society keeper methods",
        "Create genesis society init",
        "Add role validation",
        "Build treasury access controls"
      ]
    }
  },
  "LCT-Infrastructure-Queen": {
    workers: {
      "coder": [
        "Extend LCT for role entities",
        "Add society LCT type",
        "Implement role-entity binding",
        "Create LCT metadata for roles"
      ],
      "security-auditor": [
        "Validate treasury role authority",
        "Check minting permissions",
        "Verify role inheritance",
        "Audit access controls"
      ]
    }
  },
  "Web4-Compliance-Queen": {
    workers: {
      "society-validator": [
        "Verify society pool ownership",
        "Check role as entity compliance",
        "Validate citizenship witnessing",
        "Ensure law oracle integration"
      ],
      "economy-validator": [
        "Confirm semifungible implementation",
        "Validate energy cycle mechanics",
        "Check demurrage compliance",
        "Verify work proof requirements"
      ]
    }
  }
};

/**
 * Execute swarm tasks
 */
async function executeSwarmTasks() {
  console.log(`${colors.bright}${colors.cyan}🚀 ATP/ADP Infrastructure Swarm Activation${colors.reset}`);
  console.log('=' + '='.repeat(60));
  console.log(`Task: ${SWARM_TASK.name}`);
  console.log(`Budget: ${SWARM_TASK.budget} ATP`);
  console.log(`Deadline: ${SWARM_TASK.deadline}`);
  console.log(`Queens: ${SWARM_TASK.queens_involved.join(', ')}`);

  console.log(`\n${colors.bright}📋 Objectives${colors.reset}`);
  SWARM_TASK.objectives.forEach((obj, i) => {
    console.log(`  ${i+1}. ${obj}`);
  });

  console.log(`\n${colors.bright}${colors.yellow}👑 Queen Task Assignments${colors.reset}`);
  console.log('=' + '='.repeat(60));

  for (const [queen, tasks] of Object.entries(QUEEN_TASKS)) {
    console.log(`\n${colors.bright}${colors.magenta}${queen}${colors.reset}`);

    for (const [worker, workerTasks] of Object.entries(tasks.workers)) {
      console.log(`  ${colors.cyan}${worker}:${colors.reset}`);
      workerTasks.forEach(task => {
        console.log(`    • ${task}`);
      });
    }
  }

  // Implementation Plan
  console.log(`\n${colors.bright}${colors.green}📐 Implementation Plan${colors.reset}`);
  console.log('=' + '='.repeat(60));

  const implementationSteps = [
    {
      phase: "Phase 1: Token Types",
      tasks: [
        "Define semifungible token proto messages",
        "Create ATP and ADP as distinct states",
        "Add token metadata for work tracking"
      ],
      queens: ["ATP-Economy-Queen"],
      atp: 50
    },
    {
      phase: "Phase 2: Society Storage",
      tasks: [
        "Create SocietyPool storage structure",
        "Implement keeper CRUD operations",
        "Add genesis initialization"
      ],
      queens: ["Demo-Society-Queen", "ATP-Economy-Queen"],
      atp: 100
    },
    {
      phase: "Phase 3: CLI Integration",
      tasks: [
        "Fix autocli.go for mint-adp",
        "Add positional arguments",
        "Wire up to keeper methods"
      ],
      queens: ["LCT-Infrastructure-Queen"],
      atp: 50
    },
    {
      phase: "Phase 4: Energy Cycle",
      tasks: [
        "Implement MintADP with pool updates",
        "Wire DischargeATP to pool",
        "Connect RechargeADP to pool"
      ],
      queens: ["ATP-Economy-Queen", "Demo-Society-Queen"],
      atp: 150
    },
    {
      phase: "Phase 5: Compliance & Testing",
      tasks: [
        "Validate against Web4 spec",
        "Test complete energy cycle",
        "Verify pool balances"
      ],
      queens: ["Web4-Compliance-Queen"],
      atp: 100
    }
  ];

  for (const step of implementationSteps) {
    console.log(`\n${colors.bright}${step.phase}${colors.reset}`);
    console.log(`  Queens: ${step.queens.join(', ')}`);
    console.log(`  ATP Cost: ${step.atp}`);
    console.log(`  Tasks:`);
    step.tasks.forEach(task => {
      console.log(`    → ${task}`);
    });
  }

  // Critical Path
  console.log(`\n${colors.bright}${colors.red}⚠️ Critical Path${colors.reset}`);
  console.log('=' + '='.repeat(60));
  console.log("1. MUST fix CLI parameter binding first");
  console.log("2. MUST implement society pool storage");
  console.log("3. MUST update all three operations (mint/discharge/recharge)");
  console.log("4. MUST validate with Web4-Compliance-Queen");

  // File Modifications
  console.log(`\n${colors.bright}📁 Files to Modify${colors.reset}`);
  console.log('=' + '='.repeat(60));

  const filesToModify = [
    "x/energycycle/module/autocli.go - Add MintADP command",
    "x/energycycle/types/keys.go - Add society pool keys",
    "x/energycycle/types/energy_types.go - Define pool structure",
    "x/energycycle/keeper/society_pool.go - New keeper methods",
    "x/energycycle/keeper/msg_server.go - Update mint/discharge/recharge",
    "x/energycycle/genesis.go - Initialize society pools",
    "proto/racecarweb/energycycle/v1/energy_pool.proto - Pool messages"
  ];

  filesToModify.forEach(file => {
    console.log(`  • ${file}`);
  });

  // Output tracking
  console.log(`\n${colors.bright}📊 Success Metrics${colors.reset}`);
  console.log('=' + '='.repeat(60));
  console.log("✓ CLI accepts: mint-adp 1000000 society_lct treasury_role reason");
  console.log("✓ Society pool balance increases after mint");
  console.log("✓ DischargeATP decreases ATP, increases ADP");
  console.log("✓ RechargeADP decreases ADP, increases ATP");
  console.log("✓ Pool state persists across blocks");
  console.log("✓ Web4 compliance score > 80%");

  // Save swarm task
  const swarmMemory = path.join(__dirname, 'swarm-memory', 'tasks');
  if (!fs.existsSync(swarmMemory)) {
    fs.mkdirSync(swarmMemory, { recursive: true });
  }

  const taskFile = path.join(swarmMemory, `atp-infrastructure-${Date.now()}.json`);
  fs.writeFileSync(taskFile, JSON.stringify({
    task: SWARM_TASK,
    assignments: QUEEN_TASKS,
    implementation: implementationSteps,
    timestamp: new Date().toISOString(),
    status: 'initiated'
  }, null, 2));

  console.log(`\n${colors.green}✅ Swarm task saved to: ${taskFile}${colors.reset}`);
  console.log(`\n${colors.bright}${colors.yellow}🔥 Swarm Activated!${colors.reset}`);
  console.log(`ATP Budget Allocated: ${SWARM_TASK.budget} ATP`);
  console.log(`Queens are now working on their assigned tasks...`);
}

/**
 * Generate implementation code snippets
 */
function generateCodeSnippets() {
  console.log(`\n${colors.bright}${colors.blue}💻 Code Snippets for Implementation${colors.reset}`);
  console.log('=' + '='.repeat(60));

  // autocli.go fix
  console.log(`\n${colors.cyan}1. Fix autocli.go:${colors.reset}`);
  console.log(`\`\`\`go
{
  RpcMethod: "MintADP",
  Use:       "mint-adp [amount] [society-lct] [role-lct] [reason]",
  Short:     "Mint new ADP tokens for society treasury",
  PositionalArgs: []*autocliv1.PositionalArgDescriptor{
    {ProtoField: "amount"},
    {ProtoField: "society_lct"},
    {ProtoField: "role_lct"},
    {ProtoField: "reason"},
  },
},\`\`\``);

  // Society pool structure
  console.log(`\n${colors.cyan}2. Society Pool Structure:${colors.reset}`);
  console.log(`\`\`\`go
type SocietyPool struct {
  SocietyLct string
  AtpBalance sdk.Coin
  AdpBalance sdk.Coin
  LastUpdate int64
  Metadata   map[string]string
}\`\`\``);

  // Keeper method
  console.log(`\n${colors.cyan}3. Keeper Method:${colors.reset}`);
  console.log(`\`\`\`go
func (k Keeper) UpdateSocietyPool(ctx context.Context, societyLct string, atpDelta, adpDelta sdk.Int) error {
  pool, _ := k.GetSocietyPool(ctx, societyLct)
  pool.AtpBalance = pool.AtpBalance.Add(sdk.NewCoin("atp", atpDelta))
  pool.AdpBalance = pool.AdpBalance.Add(sdk.NewCoin("adp", adpDelta))
  pool.LastUpdate = ctx.BlockTime().Unix()
  return k.SetSocietyPool(ctx, societyLct, pool)
}\`\`\``);
}

// Main execution
if (require.main === module) {
  executeSwarmTasks()
    .then(() => generateCodeSnippets())
    .catch(error => {
      console.error(`${colors.red}Error: ${error.message}${colors.reset}`);
      process.exit(1);
    });
}

module.exports = { executeSwarmTasks };